Icon align fix
On small screens (mobile phone) the icons on navigation and search bar
was misaligned

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -153,3 +153,9 @@ nav {
     height: $navbar-height;
   }
 }
+@media #{$small-and-down} {
+  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+    height: $navbar-height-mobile;
+    line-height: $navbar-height-mobile;
+  }
+}
